Fix: fix bug menu Mobile overflow

--- a/style/sections/header.css
+++ b/style/sections/header.css
@@ -33,11 +33,12 @@
 
 @media (max-width: 900px) {
   [data-menu="list"] {
-    top: 100px;
-    display: none;
-    z-index: 200;
-    padding: 16px;
     gap: 8px;
+    right: 0;
+    top: 100px;
+    z-index: 200;
+    display: none;
+    padding: 16px;
     position: absolute;
     background: var(--w);
     box-shadow: 2px 2px 2px 0 rgb(0 0 0 / 20%);
@@ -46,7 +47,6 @@
 
 [data-menu="list"].active {
   animation: slide 0.2s forwards;
-  right: 0;
   display: grid;
 }
 
@@ -60,11 +60,11 @@
 
 @keyframes slide {
   from {
-    transform: translate3d(30px, 0, 0);
     opacity: 0;
+    right: -30px;
   }
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0);
+    right: 0px;
   }
 }
